# veszpremi-kajak

./: README.md  chatbot_main.py  pyproject.toml
common/: constants.py  entities.py
restaurants/: allegro.py  bekaplak.py  kekfeny.py  metisz.py  panorama.py
